--- a/FinalProject.html
+++ b/FinalProject.html
@@ -25,8 +25,8 @@
     </section>
     <section>
             <h2>Achievements</h2>
-            <progress value="100" max="100">Progress in this course 100 %</progress><br>
-            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress><br>
+            <progress value="100" max="100">Progress in this course 100 %</progress>
+            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress>
             <progress value="30" max="100">Progress in life goals 30 %</progress>
     </section>
     <section>
