--- a/FinalProject.html
+++ b/FinalProject.html
@@ -23,10 +23,13 @@
                 <li>Pho</li>
             </ul>
     </section>
-    <section>
+     <section>
             <h2>Achievements</h2>
-            <progress value="100" max="100">Progress in this course 100 %</progress>
-            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress>
+            <p>Progress in this course 100 %</p>
+            <progress value="100" max="100">Progress in this course 100 %</progress><br>
+            <p>Progress in the Specialization Capstone 20 %</p>
+            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress><br>
+            <p>Progress in life goals 30 %</p>
             <progress value="30" max="100">Progress in life goals 30 %</progress>
     </section>
     <section>
