--- a/FinalProject.html
+++ b/FinalProject.html
@@ -25,12 +25,12 @@
     </section>
      <section>
             <h2>Achievements</h2>
-            <p>Progress in this course 100 %</p>
-            <progress value="100" max="100">Progress in this course 100 %</progress><br>
-            <p>Progress in the Specialization Capstone 20 %</p>
-            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress><br>
-            <p>Progress in life goals 30 %</p>
-            <progress value="30" max="100">Progress in life goals 30 %</progress>
+            <p>Progress in this course 100 %
+            <progress value="100" max="100">Progress in this course 100 %</progress></p>
+            <p>Progress in the Specialization Capstone 20 %
+            <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress></p>
+            <p>Progress in life goals 30 %
+            <progress value="30" max="100">Progress in life goals 30 %</progress></p>
     </section>
     <section>
             <h2>More About Me</h2>
