--- a/FinalProject.html
+++ b/FinalProject.html
@@ -25,12 +25,12 @@
     </section>
      <section>
             <h2>Achievements</h2>
-            <p>Progress in this course 100 %
+            <p>Progress in this course (100 %)
             <progress value="100" max="100">Progress in this course 100 %</progress></p>
-            <p>Progress in the Specialization Capstone 20 %
+            <p>Progress in the Specialization Capstone (20 %)
             <progress value="20" max="100">Progress in the Specialization Capstone 20 %</progress></p>
             <p>Progress in life goals 30 %
-            <progress value="30" max="100">Progress in life goals 30 %</progress></p>
+            <progress value="30" max="100">Progress in life goals (30 %)</progress></p>
     </section>
     <section>
             <h2>More About Me</h2>
@@ -40,7 +40,7 @@
             </details>
     </section>
     <footer>
-    <img src="WD4E.png" alt="Intro to Webdesign">
+    <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Intro to Webdesign">
     <p>This page was created by Eva Burgschwaiger. To learn more about webdesign, visit <a href="https://intro-webdesign.com/">Intro to Webdesign.</a></p>
     </footer>
 </body>
